test/forward-auth/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: test-app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.home.dornol.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: whoami-auth
          namespace: test-app
  tls:
    certResolver: letsencrypt
