test/forward-auth/whoami-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whoami-auth
  namespace: test-app
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local?rd=https%3A%2F%2Fwhoami.home.dornol.dev
    trustForwardHeader: true
    tls:
      insecureSkipVerify: false
    authResponseHeaders:
      - "X-Auth-Request-Email"
      - "X-Auth-Request-User"
    preserveLocationHeader: false
